# interactive-knapsack-planner

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh
backend/: CMakeLists.txt  config.h.in  main.cpp
backend/include/gui/: gui_app.hpp  huffman_gui.hpp  imgui_sfml_bridge.hpp  knapsack_gui.hpp
backend/include/huffman/: huffmantree.hpp  node.hpp
backend/include/knapsack/: branchbound.hpp  brute_force_knapsack.hpp  dp_knapsack.hpp  greedy_knapsack.hpp  knapsack.h  knapsack_solver.hpp
backend/knapsack/: dp_knapsack.cpp  dp_knapsack.hpp
backend/src/: branch_bound_knapsack.cpp  brute_force_knapsack.cpp  dp_knapsack.cpp  greedy_knapsack.cpp  gui_app.cpp  huffman_gui.cpp  huffmantree.cpp  imgui_sfml_bridge.cpp  knapsack_gui.cpp  knapsack_solver.cpp  main.cpp  node.cpp
backend/src/gui/: gui_app.cpp  huffman_gui.cpp  imgui_sfml_bridge.cpp  knapsack_gui.cpp
backend/src/huffman/: huffmantree.cpp  node.cpp
backend/src/knapsack/: branch_bound_knapsack.cpp  brute_force_knapsack.cpp  dp_knapsack.cpp  greedy_knapsack.cpp  knapsack_solver.cpp
images/knapsack/: knapsack_dp_trace.mov
scripts/: setup_dependencies.sh
